removed all notions of strand

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,8 @@
 #**    Description: Makefile for FastReadStitcher                          */
 #***************************************************************************/
 
-CXX             = g++
-CXXFLAGS        = -Wno-unused-variable -Wno-non-virtual-dtor -std=c++11  -fopenmp -Wno-write-strings
+CXX             = g++-5
+CXXFLAGS        = -static-libstdc++ -static-libgcc  -Wno-unused-variable -Wno-non-virtual-dtor -std=c++11  -fopenmp -Wno-write-strings
 EXEC            = ${PWD}/FStitch
 ARCH  			= getconf LONG_BIT
 
