--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# Automake and Autoconf
 *.o
+AUTHORS
+COPYING
+ChangeLog
+INSTALL
+NEWS
+README
+aclocal.m4
+autom4te.cache/
+autoscan.log
+config.h
+config.h.in
+config.log
+config.status
+configure.scan
+src/.deps
+src/FStitch
+stamp-h1
+Makefile.in
+Makefile
+
+# Distribution files
+compile
+configure
+depcomp
+install-sh
+missing
+
+# Emacs
+*~
